# finally

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_GEMINI.md  Dockerfile  INDIAN_STOCK_MARKET_API.md  README.md
.claude/: gsd-file-manifest.json  settings.json
.claude-plugin/: marketplace.json
.claude/agents/: change-reviewer.md  gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  (+3 more)
backend/: conftest.py  demo.py  pyproject.toml
backend/app/: auth.py  dependencies.py  llm.py  main.py  portfolio.py  schemas.py
backend/app/routes/: auth.py  chat.py  health.py  portfolio.py  prices.py  watchlist.py
backend/db/: __init__.py  database.py  queries.py  schema.sql
backend/market/: __init__.py  base.py  factory.py  fallback.py  indian_api.py  simulator.py  types.py  yahoo.py
backend/tests/: test_db.py  test_factory.py  test_fallback.py  test_indian_api.py  test_llm.py  test_market_interface.py  test_queries.py  test_routes.py  test_simulator.py  test_yahoo.py
db/: finally.db
frontend/: package-lock.json  package.json
planning/: Codex_CodeReview  INDIAN_API.md  INDIAN_STOCK_API.md  MARKET_DATA_DESIGN.md  MARKET_DATA_SUMMARY.md  MARKET_INTERFACE.md  MARKET_SIMULATOR.md  PLAN.md  REVIEW.md
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: docker-compose.test.yml  package.json  playwright.config.ts
(+127 files in other folders)
