[project]
name = "finally-backend"
version = "0.1.0"
description = "FinAlly AI Trading Workstation — Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.40.0",
    "yfinance>=0.2.50",
    "aiosqlite>=0.22.1",
    "sse-starlette>=3.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["market", "db", "app"]

[tool.hatch.build.targets.wheel.force-include]
"db/schema.sql" = "db/schema.sql"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
